@@ -1,5 +1,10 @@
 2009-04-08  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
 
+	* tests/completion-simple.c:
+	Use proper coding style.
+
+2009-04-08  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
+
 	* gtksourceview/gtksourceview.c:
 	Load GtkSourceCompletion only when requested.
 
